# app-interface-client-js

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  flake.nix  package-lock.json  package.json  pkgs.nix  webpack.config.js
src/: base_classes.js  holo_hash_map.js  index.js  node.js  proxies.js  scoped_interfaces.js  utils.js
tests/: Makefile  utils.js
tests/content_dna/: dna.yaml
tests/integration/: test_basic.js
tests/packs/: storage.happ
tests/unit/: test_hierarchy.js  test_holo_hash_map.js  test_proxies.js
tests/zomes/content/: Cargo.toml
tests/zomes/content/src/: lib.rs
tests/zomes/content_csr/: Cargo.toml
tests/zomes/content_csr/src/: lib.rs
