[package]
name = "content"
version = "0.0.0"
edition = "2018"

[lib]
name = "content"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
rmpv = { version = "1.0.0", features = ["with-serde"] }
whi_hdk_extensions = { git = "https://github.com/mjbrisebois/rust-hdk-extensions.git", rev = "f115791d05c35de974968fa4a867b2f13f6e6a0b" }
